{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerPart1",
            "id": "94d6cd4b-464d-4e01-8c83-5f683323c852",
            "actions": [
                {
                    "name": "GrabbingLeft",
                    "type": "Button",
                    "id": "fb0521ce-475f-4101-9c13-1a2ae6d4888e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabbingRight",
                    "type": "Button",
                    "id": "38c8c0e9-8847-4706-9226-e98f7c24d31b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "23b0135e-355f-4169-b81c-0681c4bd848e",
                    "path": "<OculusTouchController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabbingLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeef98b3-845f-4994-a579-8367a95762af",
                    "path": "<OculusTouchController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabbingRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}